source/ports/node_port/package/include/metacall/metacall_value.h

/* -- Enumerations -- */

enum metacall_value_id
{
	METACALL_BOOL	= 0,
	METACALL_CHAR	= 1,
	METACALL_SHORT	= 2,
	METACALL_INT	= 3,
	METACALL_LONG	= 4,
	METACALL_FLOAT	= 5,
	METACALL_DOUBLE	= 6,
	METACALL_STRING	= 7,
	METACALL_BUFFER	= 8,
	METACALL_ARRAY	= 9,
	METACALL_MAP	= 10,
	METACALL_PTR	= 11,
	METACALL_NULL	= 12,

	METACALL_SIZE,
	METACALL_INVALID
};
/* -- Methods -- */

/**
*  @brief
*    Create a value from boolean @b
*
*  @param[in] b
*    Boolean will be copied into value
*
*  @return
*    Pointer to value if success, null otherwhise
*/
METACALL_API void * metacall_value_create_bool(boolean b);
/**
*  @brief
*    Create a value from char @c
*
*  @param[in] c
*    Character will be copied into value
*
*  @return
*    Pointer to value if success, null otherwhise
*/
METACALL_API void * metacall_value_create_char(char c);
/**
*  @brief
*    Create a value from short @s
*
*  @param[in] s
*    Short will be copied into value
*
*  @return
*    Pointer to value if success, null otherwhise
*/
METACALL_API void * metacall_value_create_short(short s);
/**
*  @brief
*    Create a value from integer @i
*
*  @param[in] i
*    Integer will be copied into value
*
*  @return
*    Pointer to value if success, null otherwhise
*/
METACALL_API void * metacall_value_create_int(int i);
/**
*  @brief
*    Create a value from long @l
*
*  @param[in] l
*    Long integer will be copied into value
*
*  @return
*    Pointer to value if success, null otherwhise
*/
METACALL_API void * metacall_value_create_long(long l);
/**
*  @brief
*    Create a value from single precision floating point number @f
*
*  @param[in] f
*    Float will be copied into value
*
*  @return
*    Pointer to value if success, null otherwhise
*/
METACALL_API void * metacall_value_create_float(float f);
/**
*  @brief
*    Create a value from double precision floating point number @d
*
*  @param[in] d
*    Double will be copied into value
*
*  @return
*    Pointer to value if success, null otherwhise
*/
METACALL_API void * metacall_value_create_double(double d);
/**
*  @brief
*    Create a value from string @str
*
*  @param[in] str
*    Constant string will be copied into value
*
*  @param[in] length
*    Length of the constant string
*
*  @return
*    Pointer to value if success, null otherwhise
*/
METACALL_API void * metacall_value_create_string(const char * str, size_t length);
/**
*  @brief
*    Create a value buffer from array @buffer
*
*  @param[in] buffer
*    Constant memory block will be copied into value array
*
*  @param[in] size
*    Size in bytes of data contained in the array
*
*  @return
*    Pointer to value if success, null otherwhise
*/
METACALL_API void * metacall_value_create_buffer(const void * buffer, size_t size);
/**
*  @brief
*    Create a value array from array of values @values
*
*  @param[in] values
*    Constant array of values will be copied into value list
*
*  @param[in] size
*    Number of elements contained in the array
*
*  @return
*    Pointer to value if success, null otherwhise
*/
METACALL_API void * metacall_value_create_array(const void * values[], size_t size);
/**
*  @brief
*    Create a value from pointer @p
*
*  @param[in] ptr
*    Pointer to constant data will be copied into value
*
*  @return
*    Pointer to value if success, null otherwhise
*/
METACALL_API void * metacall_value_create_ptr(const void * ptr);
/**
*  @brief
*    Create a value of type null
*
*  @return
*    Pointer to value if success, null otherwhise
*/
METACALL_API void * metacall_value_create_null(void);
/**
*  @brief
*    Provide type id of value
*
*  @param[in] v
*    Reference to the value
*
*  @return
*    Return type id assigned to value
*/
METACALL_API enum metacall_value_id metacall_value_id(void * v);
/**
*  @brief
*    Convert value @v to char
*
*  @param[in] v
*    Reference to the value
*
*  @return
*    Value converted to char
*/
METACALL_API char metacall_value_to_char(void * v);
/**
*  @brief
*    Convert value @v to short
*
*  @param[in] v
*    Reference to the value
*
*  @return
*    Value converted to short
*/
METACALL_API short metacall_value_to_short(void * v);
/**
*  @brief
*    Convert value @v to integer
*
*  @param[in] v
*    Reference to the value
*
*  @return
*    Value converted to integer
*/
METACALL_API int metacall_value_to_int(void * v);
/**
*  @brief
*    Convert value @v to long integer
*
*  @param[in] v
*    Reference to the value
*
*  @return
*    Value converted to long integer
*/
METACALL_API long metacall_value_to_long(void * v);
/**
*  @brief
*    Convert value @v to single precision floating point
*
*  @param[in] v
*    Reference to the value
*
*  @return
*    Value converted to float
*/
METACALL_API float metacall_value_to_float(void * v);
/**
*  @brief
*    Convert value @v to double precision floating point
*
*  @param[in] v
*    Reference to the value
*
*  @return
*    Value converted to dobule
*/
METACALL_API double metacall_value_to_double(void * v);
/**
*  @brief
*    Convert value @v to string
*
*  @param[in] v
*    Reference to the value
*
*  @return
*    Value converted to C string
*/
METACALL_API char * metacall_value_to_string(void * v);
/**
*  @brief
*    Convert value @v to pointer
*
*  @param[in] v
*    Reference to the value
*
*  @return
*    Value converted to pointer
*/
METACALL_API void * metacall_value_to_ptr(void * v);
/**
*  @brief
*    Destroy a value from scope stack
*
*  @param[in] v
*    Reference to the value
*/
METACALL_API void metacall_value_destroy(void * v);