source/metacall/include/metacall/metacall.h

/**
*  @brief
*    Initialize MetaCall library
*
*  @return
*    Zero if success, different from zero otherwise
*/
METACALL_API int metacall_initialize(void);
/**
*  @brief
*    Loads a script from file specified by @path
*
*  @param[in] tag
*    Extension of the script
*
*  @param[in] paths
*    Path array of files
*
*  @param[in] size
*    Size of the array @paths
*
*  @param[inout] handle
*    Optional pointer to reference of loaded handle. If the parameter is NULL, the symbols loaded are
*    propagated to the loader scope (i.e they will share the scope between all previously loaded files and they can collide).
*    Otherwise, if we pass a void* pointer set to NULL, it will behave as output parameter, obtaining the reference to the
*    created handle, which can be later on used for calling to functions of that handle. The symbols will not be propagated
*    to the loader scope and they will be private (this prevents collisions). The last case is if we pass an already allocated
*    handle (i.e a void* pointer pointing to an previously loaded handle), then in this case, the symbols loaded will be propagated
*    to the previously allocated handle, and it will behave as a in parameter.
*
*  @return
*    Zero if success, different from zero otherwise
*/
METACALL_API int metacall_load_from_file(const char *tag, const char *paths[], size_t size, void **handle);
/**
*  @brief
*    Call a function anonymously by value array @args
*
*  @param[in] name
*    Name of the function
*
*  @param[in] args
*    Array of pointers to data
*
*  @return
*    Pointer to value containing the result of the call
*/
METACALL_API void *metacallv(const char *name, void *args[]);
/**
*  @brief
*    Call a function anonymously by variable arguments @va_args
*
*  @param[in] name
*    Name of the function
*
*  @param[in] va_args
*    Variadic function parameters
*
*  @return
*    Pointer to value containing the result of the call
*/
METACALL_API void *metacall(const char *name, ...);
/**
*  @brief
*    Destroy MetaCall library
*/
METACALL_API void metacall_destroy(void);